# fine-tune-gpt2

./: README.md  evaluate_model.py  fine_tune_model.ipynb  mathqa_task.py  model.py  pyproject.toml  requirements.txt
app/: README.md  main.py  test_api.py
