[project]
name = "pythonproject7"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.110.0",
    "ipywidgets==8.1.7",
    "lighteval>=0.12.0",
    "notebook>=7.4.4",
    "pydantic>=2.7.0",
    "python-dotenv>=1.1.1",
    "torch==2.7.1",
    "transformers[torch]>=4.54.1",
    "uvicorn>=0.29.0",
]
